# talentekia-agentes-ia

./: .anythingllm_agent.json  .env.example  .env.m2  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README_AUTO_IMPROVEMENT.md  README_AUTO_IMPROVEMENT_PERSONALIZADO.md  deploy_talentek.sh  dev.sh  docker-compose.yml  docker-entrypoint.sh  initialize_system.py  lanzar_agentes.py  load_talentek_config.py  mypy.ini  plan_unificacion_talentek.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_agents.py  run_talentek_m2.py  setup.py  start_auto_sync.sh  start_talentek.sh  start_talentek_unified.sh  start_talentekia.sh  stop_auto_sync.sh  switch_mode.sh  talentek.py  talentek_agentes_config.toml  talentek_agentes_config_local.toml
TalentekSystemUnified/: README.md  launch_talentek_system.py  requirements.txt  start_talentek.sh
agents/: agent_manager.py  auto_improve_agent.py  base_agent.py  estrategia_comercial.py  finanzas_personales.py  linkedin_agent.py  linkedin_scraper_enhanced.py
config/: auto_improvement_config.json  git_sync_config.json  mac_m2_config.py  mac_m2_optimizations.py  personal_settings.py  settings.py  talentek_config.toml
docs/: DESARROLLO.md  MIGRATION.md  QUICKSTART.md  WORKFLOW.md  linkedin_ofertas.md
scripts/: anythingllm_integration.py  auto_improvement.py  auto_sync.py  env_loader.py  git_sync_improvements.py  github_integration.py  huggingface_integration.py  migrate_repositories.sh  monitor_m2.py  optimize_for_m2.py  run_weekly_summary.py  schedule_auto_improvement.py  (+4 more)
(+41 files in other folders)
