[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentekia"
description = "Sistema de agentes de IA personalizados para automatización y análisis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pablo Giraldez", email = "pablo@talentek.io"}
]
maintainers = [
    {name = "Pablo Giraldez", email = "pablo@talentek.io"}
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PGQ888/talentekia-agentes-ia"
Documentation = "https://github.com/PGQ888/talentekia-agentes-ia/docs"
Repository = "https://github.com/PGQ888/talentekia-agentes-ia.git"
Issues = "https://github.com/PGQ888/talentekia-agentes-ia/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "setup.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false